--- a/set_router/src/assets/main.css
+++ b/set_router/src/assets/main.css
@@ -1,9 +1,4 @@
-/* @import './base.css'; */
-
-* {
-  padding: 0;
-  margin: 0;
-}
+@import './base.css';
 
 #app {
   max-width: 1280px;
@@ -20,15 +15,13 @@ a,
   transition: 0.4s;
 }
 
-/* don't need media stuff rn but another time */
-
-/* @media (hover: hover) {
+@media (hover: hover) {
   a:hover {
     background-color: hsla(160, 100%, 37%, 0.2);
   }
-} */
+}
 
-/* @media (min-width: 1024px) {
+@media (min-width: 1024px) {
   body {
     display: flex;
     place-items: center;
@@ -39,4 +32,4 @@ a,
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
   }
-} */
+}
