--- a/vue_routes/src/assets/style.css
+++ b/vue_routes/src/assets/style.css
@@ -9,6 +9,11 @@
   margin: 0 auto;
   padding: 2rem;
   font-weight: normal;
+  text-align: center;
+}
+
+body {
+  line-height: 1.6;
 }
 
 /*# sourceMappingURL=style.css.map */
